--- a/index.html
+++ b/index.html
@@ -1,9 +1,142 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Hello, World</title>
+    <title>CI/CD Pipeline Landing Page</title>
+    <style>
+      body {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        margin: 0;
+        padding: 0;
+      }
+
+      .header {
+        background-color: #005cff;
+        color: #ffffff;
+        padding: 20px;
+        text-align: center;
+      }
+
+      h1 {
+        font-size: 48px;
+        font-weight: bold;
+        margin: 0;
+      }
+
+      .hero {
+        background-color: #f5f5f5;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 500px;
+      }
+
+      .hero h2 {
+        font-size: 36px;
+        margin: 0;
+        margin-bottom: 20px;
+        font-weight: bold;
+        text-align: center;
+      }
+
+      .hero p {
+        font-size: 18px;
+        margin: 0;
+        margin-bottom: 40px;
+        text-align: center;
+        max-width: 800px;
+      }
+
+      .feature {
+        background-color: #ffffff;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        padding: 40px;
+      }
+
+      .feature img {
+        width: 400px;
+        height: 300px;
+        object-fit: cover;
+      }
+
+      .feature h3 {
+        font-size: 24px;
+        margin: 0;
+        margin-bottom: 20px;
+        font-weight: bold;
+      }
+
+      .feature p {
+        font-size: 18px;
+        margin: 0;
+        margin-bottom: 40px;
+        max-width: 400px;
+      }
+
+      .cta {
+        background-color: #005cff;
+        color: #ffffff;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 200px;
+        padding: 40px;
+        text-align: center;
+      }
+
+      .cta h3 {
+        font-size: 36px;
+        margin: 0;
+        margin-bottom: 20px;
+        font-weight: bold;
+      }
+
+      .cta p {
+        font-size: 18px;
+        margin: 0;
+        margin-bottom: 40px;
+        max-width: 600px;
+      }
+
+      .footer {
+        background-color: #444444;
+        color: #ffffff;
+        padding: 20px;
+        text-align: center;
+      }
+
+      .footer p {
+        margin: 0;
+      }
+    </style>
   </head>
   <body>
-    <h1>Hello, World</h1>
+    <header class="header">
+      <h1>CI/CD Pipeline</h1>
+      <p>Automate your software delivery process with ease</p>
+    </header>
+    <section class="hero">
+      <h2>Streamline your software delivery process</h2>
+      <p>CI/CD pipelines help you deliver software faster, with fewer errors and lower costs. Get started with our simple and easy-to-use platform.</p>
+    </section>
+    <section class="feature">
+      <div>
+        <h3>Continuous Integration</h3>
+        <p>Automatically build and test your code every time you make a change,</p>
+      </div>
+      <img src="" />
+    </section>
+    <section class="cta">
+      <h3>Get Started Today</h3>
+      <p>Sign up for our platform and start automating your software delivery process today.</p>
+      <button>Sign Up Now</button>
+    </section>
+    <footer class="footer">
+      <p>&copy; 2023 CI/CD Pipeline. All rights reserved.</p>
+    </footer>
   </body>
 </html>
