--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>CI/CD Pipeline Landing Page</title>
     <style>
       body {
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
         margin: 0;
         padding: 0;
       }
@@ -117,22 +117,30 @@
   <body>
     <header class="header">
       <h1>CI/CD Pipeline</h1>
-      <p>Automate your software delivery process with ease</p>
+      <p>Automate your software delivery process with ease!</p>
     </header>
     <section class="hero">
       <h2>Streamline your software delivery process</h2>
-      <p>CI/CD pipelines help you deliver software faster, with fewer errors and lower costs. Get started with our simple and easy-to-use platform.</p>
+      <p>
+        CI/CD pipelines help you deliver software faster, with fewer errors and
+        lower costs. Get started with our simple and easy-to-use platform.
+      </p>
     </section>
     <section class="feature">
       <div>
         <h3>Continuous Integration</h3>
-        <p>Automatically build and test your code every time you make a change,</p>
+        <p>
+          Automatically build and test your code every time you make a change,
+        </p>
       </div>
       <img src="" />
     </section>
     <section class="cta">
       <h3>Get Started Today</h3>
-      <p>Sign up for our platform and start automating your software delivery process today.</p>
+      <p>
+        Sign up for our platform and start automating your software delivery
+        process today.
+      </p>
       <button>Sign Up Now</button>
     </section>
     <footer class="footer">
