--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
   </head>
   <body>
     <header class="header">
-      <h1>CI/CD Pipeline</h1>
+      <h1>Goedemiddag Erik</h1>
       <p>Automate your software delivery process with ease!</p>
     </header>
     <section class="hero">
